# python-etudes

./: LICENSE  README.md
ttkcalculator/: README.md  pyproject.toml
ttkcalculator/docs/: manual.md  technical_specs.md
ttkcalculator/tests/: controller_test.py  model_test.py  view_mocks.py
ttkcalculator/ttkcalculator/: app.py  controller.py  model.py  tkview.py  view.py
